syntax = "proto3";
option java_multiple_files = true;
option java_package = "ex.account.proto";
option csharp_namespace = "ex.account.PROTO";

message CreateAccountRequest
{
    string name = 2;
    string password = 3;
    string email = 4;
}

message AccountCreated
{
    uint64 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
}
